# 3D-SMLoc

./: README.md
mapping_localization/: CMakeLists.txt  manifest.xml  package.xml
mapping_localization/config/: configFile1.yaml  cube_opti.yaml  localization_cube.yaml  localization_parking1.yaml  localization_parking2.yaml  localization_seq1.yaml  localization_seq2.yaml  localization_seq3.yaml  localization_seq4.yaml  localization_seq5.yaml  localization_seq6.yaml  localization_seq7.yaml  localization_yt_2023-2-15.yaml  localization_yt_2023-3-18.yaml  localization_zjg2_2023-2-15.yaml  localization_zjg2_2023-3-18.yaml  longterm_01.yaml  longterm_02.yaml  longterm_03.yaml  longterm_04.yaml  longterm_05.yaml  longterm_06.yaml  longterm_parking1.yaml  longterm_parking2.yaml  longterm_parking3.yaml  map_parking1.yaml  map_yq.yaml  map_yt.yaml  map_yt_2023-2-15.yaml  map_yt_2023-3-18.yaml  map_zjg1.yaml  map_zjg2.yaml  map_zjg2_2023-2-15.yaml  map_zjg2_2023-3-18-2.yaml  opti_zjg2.yaml  pose_opti.yaml  slam_01.yaml  slam_02.yaml  slam_03.yaml  slam_04.yaml  (+5 more)
mapping_localization/data/localization_seq1/: all_objects.txt  ground_truth.txt  localization_result.txt  localization_result_zjl.txt  map.pcd
mapping_localization/data/map_zjg2/: TUM_odmetry_interpolation.txt  all_objects.txt  color.txt
mapping_localization/data/map_zjg2/map/: 130-6250.pcd  all_objects.txt  cube.txt  cube_es.py
mapping_localization/data/map_zjg2/vector_map/: area.csv  line.csv  point.csv  road_surface_mark.csv  tf_local.launch  whiteline.csv
mapping_localization/data/map_zjg2/whole_cube/: 000124  000127  000129  000130  000131  000132  000133  000134  000135  000136  000137  000138  000143  000144  000146  000147  000148  000149  000152  000153  000154  000155  000156  000157  000158  000159  000160  000161  000162  000163  000164  000165  000166  000167  000168  000169  000170  000171  000172  000173  (+9050 more)
mapping_localization/include/: Frame.h  g2o_object.h  matrix_utils.h  object_landmark.h  objectset.h
mapping_localization/include/aloam_velodyne/: common.h
mapping_localization/include/scancontext/: Scancontext.cpp  Scancontext.h
mapping_localization/launch/: cube_localization.launch  cube_opti.launch  localization_avp.launch  localizationransac.launch  map_avp.launch  pose_opti.launch  ransac_seg.launch  show_cube.launch  slam.launch  slamRGB1.launch  slam_txt.launch  slamransac.launch  txt_localization.launch
mapping_localization/rviz/: localization.rviz  longterm.rviz  map.rviz  slam.rviz
mapping_localization/src/: laserPosegraphOptimization.cpp  line2pointcloud.cpp  localization.cpp  localization_cube.cpp  mapping.cpp  matrix_utils.cpp  object_map.cpp  pointCloudFromRGB.cpp  pointCloudFromtxt.cpp  pose_graph_optimizer.cpp  pose_graph_optimizer2.cpp  pub_pointcloud.cpp  pubimage.cpp  pubpose.cpp  pubpose2.cpp  ransac_point2line.cpp  ransac_point2line_connection.cpp  slam.cpp  transfer_point_cloud.cpp  txt_localization.cpp  txt_mapping.cpp
